<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Bulls and Cows</string>
    
    <string name="secret_line">Secret word</string>
    <string name="guesses_line">Your guesses</string>
    <string name="position_line">Position in question&#8230;</string>
    
    <string name="diplicated_msg">Duplicated symbol</string>
    <string name="word_too_long_msg">Word is too long</string>
    
    <string name="new_game_title">New game</string>
    <string name="new_game_title_no_dialogs">Instant new game</string>
    <string name="new_word_title" tools:ignore="UnusedResources">Guess</string>
    <string name="win_title">You win!</string>
    <string name="win_msg">Congratulations! You solved the puzzle in %d steps!</string>
    
    <string name="clear_marks_title">Clear marks</string>
    <string name="clear_marks_conf">Clear all marks?</string>
    
    <string name="word_length_title">Puzzle size</string>
    <string name="alphabet_title">Puzzle alphabet</string>
    <string name="secret_title">Secret</string>
    <string name="clear_title">Clear</string>
    
    <string name="give_up_title">Give up</string>
    <string name="give_up_conf">Are you sure you want to give up?</string>
    <string name="give_up_msg">You failed to guess the secret&#8230; Try again!</string>
    
    <string name="intro_menu_caption">Intro</string>
    <string name="intro_title">Brief intro</string>
	<string name="guess_caption">Guess</string>
	<string name="menu_caption" tools:ignore="MissingTranslation">&#8230;</string>
    <string name="translate"><a href="">Translate</a> this word</string>
    <string name="close_caption">Close</string>
    <string name="intro_msg">\
Hey,\n\n\
welcome to my version of the <b>Bulls and Cows</b> game for your Androids! Enjoy this amusing logical puzzle and break digital codes or secret words the game challenges you by! It might remind you of <b>Mastermind</b> but here you should deal with unique symbols (digits or letters), not colours. Still not sure how to play? Read my notes below!\n\n\
\tReady? Let\'s start then! Choose the puzzle - are you going to break a secret number or a secret word (nouns only!) ? All symbols in every secret code are different. Suggest your variants and the Game will show you how many right symbols is in this guess and how many of them are on the right places. Click on blue <b>Guess</b> button to suggest your answer and get the number of matches on the main screen. If the matching symbols are on their right positions, they are <b>\'bulls\'</b> and are shown as big green sticks, if on different positions, they are <b>\'cows\'</b>, shown as small <b>orange</b> sticks.\n\n\
\tWhat\'s the next step? Find these bulls and cows and put them in the right order to get the secret code. The central <b>Guesses</b> frame on the screen stores a history of all your guesses and helps you to figure out what symbols are used in the puzzle. <b>Click on symbols</b> there to highlight your bulls and cows and they\'ll appear in the <b>Positions</b> frame below where you can actually define the right places for you symbols. How would I do that? Just keep clicking on a symbol. On the <b>Guesses</b> frame click once to get the red colour which means the symbol could be just stricken off, it has nothing to deal with this puzzle; click again to turn it yellow - this symbol might be a part of the secret word! On the <b>Positions</b> frame red colour signifies a wrong position, while green highlights the right symbol on the right place. Make a symbol turn green there and voila! it appears on the top as a part of <b>\'The Secret Word\'</b>!\n\n\
\tOnce you <b>reveal the secret number or word</b> you win! The faster you do this the better codebreaker you are :)\n\n\
\tNow you are ready to play&#8230; <b>Enjoy the game!</b> 
	</string>
</resources>