<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/MainLayout"
	android:layout_width="fill_parent" 
	android:layout_height="fill_parent"
	android:orientation="vertical"
	>

   	<TextView
	     style="?android:attr/listSeparatorTextViewStyle"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:text="@string/secret_line"
		/>

   	<!-- Secret word -->
	<LinearLayout
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		android:paddingTop="@dimen/view_top_margin"
		android:paddingBottom="@dimen/view_top_margin"
		android:paddingRight="@dimen/secret_line_right_padding"		
		android:paddingLeft="@dimen/line_left_margin"
		android:gravity="left" 
		>
		
		<!-- Secret -->
		<LinearLayout
			android:id="@+id/SecretLayout"
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content"
			android:orientation="horizontal"
			/> 
	
		<!-- Guess  -->
		<paxus.bnc.android.view.StatelessCharsView
			android:id="@+id/ShowAlphabetButton"
			android:layout_width="fill_parent"
			android:layout_height="@dimen/char_height"
			android:layout_marginLeft="@dimen/button_left_margin"
			android:background="@drawable/guess"
			caption="@string/guess_caption"
			color="@drawable/font_color_white"
			/>

	</LinearLayout>	

	<TextView
	    style="?android:attr/listSeparatorTextViewStyle"
	    android:text="@string/guesses_line"
		/>

	<ScrollView 
		android:id="@+id/ScrollOffered"
		android:layout_width="fill_parent"
		android:layout_height="0dp"			
		android:scrollbars="vertical"
		android:scrollbarStyle="outsideInset"
		android:persistentDrawingCache="all"
		android:drawingCacheQuality="high" 
		android:animationCache="true" 
		android:alwaysDrawnWithCache="true"
		android:layout_weight="1.0"
		android:paddingTop="@dimen/view_top_margin"
		android:paddingRight="@dimen/scroll_right_padding"
		android:paddingLeft="@dimen/line_left_margin"
	    >
	    
		<!-- Offered words + comparison results -->
	   	<LinearLayout
			android:id="@+id/OfferedsLayout"
			android:layout_width="fill_parent" 
			android:layout_height="wrap_content"
			android:orientation="vertical"
			android:persistentDrawingCache="all"
			/>
			<!-- android:layoutAnimation="@anim/layout_random_fade_in" -->
			
	</ScrollView>

	<TextView
	    style="?android:attr/listSeparatorTextViewStyle"
	    android:text="@string/position_line"
		/>
	
	<!-- PosTable: To contain various number of LinearLayouts of PosTable. 
	Also contains "menu" button (system "menu" missed on some devices).
	No paddings, inner PositioningLayout has what needed-->
	<LinearLayout
		android:id="@+id/PositioningHolderLayout"
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		android:paddingTop="@dimen/view_top_margin"
		android:paddingBottom="@dimen/view_top_margin"
		android:paddingRight="@dimen/view_top_margin"		
		android:paddingLeft="@dimen/line_left_margin"
		android:gravity="bottom"
		>
	
		<LinearLayout
			android:id="@+id/PositioningLayout"
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content"
			android:orientation="vertical"
			/>
			
			<FrameLayout
				android:layout_width="wrap_content" 
				android:layout_height="wrap_content"
				android:paddingTop="@dimen/view_top_margin"
				>	<!-- frame to keep same height + top padding even when no pos line visible -->
				<paxus.bnc.android.view.StatelessCharsView
					android:id="@+id/ShowMenuButton"
					android:layout_width="wrap_content"
					android:layout_height="@dimen/char_height"
					android:layout_marginLeft="@dimen/button_left_margin"
					android:background="@drawable/guess"
					android:alpha="0.5"
					caption="@string/menu_caption"
					color="@drawable/font_color_white"			
					/>
			</FrameLayout>
	</LinearLayout>
		
</LinearLayout>
